# PAIR-Ollama

./: .gitignore  config.py  conversers.py  language_models.py  main.py  pyproject.toml  requirements.txt  run.sh
jailbreakbench/: config.py
jailbreakbench/llm/: litellm.py
