[project]
name = "pair-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.7.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "airportsdata==20250224",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "astor==0.8.1",
    "async-timeout==5.0.1 ; python_full_version < '3.11'",
    "attrs==25.3.0",
    "blake3==1.0.4",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1 ; implementation_name == 'pypy'",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "cloudpickle==3.1.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "compressed-tensors==0.9.3",
    "cupy-cuda12x==13.4.1 ; sys_platform != 'darwin'",
    "datasets==3.6.0",
    "deprecated==1.2.18",
    "depyf==0.18.0",
    "dill==0.3.8",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docker-pycreds==0.4.0",
    "einops==0.8.1",
    "email-validator==2.2.0",
    "exceptiongroup==1.3.0 ; python_full_version < '3.11'",
    "fastapi==0.115.12",
    "fastapi-cli==0.0.7",
    "fastchat==0.1.0",
    "fastrlock==0.8.3 ; sys_platform != 'darwin'",
    "filelock==3.18.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.0",
    "ftfy==6.3.1",
    "gguf==0.16.3",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.71.0",
    "h11==0.16.0",
    "hf-xet==1.1.1",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.31.2",
    "idna==3.10",
    "importlib-metadata==8.0.0",
    "interegular==0.3.3",
    "jailbreakbench==1.0.0",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.5.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "lark==1.2.2",
    "litellm==1.69.2",
    "llguidance==0.7.19 ; platform_machine == 'aarch64' or platform_machine == 'arm64' or platform_machine == 'x86_64'",
    "llvmlite==0.44.0",
    "lm-format-enforcer==0.10.11",
    "locate==1.1.1",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mistral-common==1.5.4",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "msgspec==0.19.0",
    "multidict==6.4.3",
    "multiprocess==0.70.16",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "ninja==1.11.1.4",
    "nltk==3.9.1",
    "numba==0.61.2",
    "numpy==2.2.5",
    "nvidia-cublas-cu12==12.4.5.8 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.1.0.70 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.2.1.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.5.147 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.6.1.9 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.3.1.170 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.6.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.21.5 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "openai==1.75.0",
    "opencv-python-headless==4.11.0.86",
    "opentelemetry-api==1.26.0",
    "opentelemetry-exporter-otlp==1.26.0",
    "opentelemetry-exporter-otlp-proto-common==1.26.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.26.0",
    "opentelemetry-exporter-otlp-proto-http==1.26.0",
    "opentelemetry-proto==1.26.0",
    "opentelemetry-sdk==1.26.0",
    "opentelemetry-semantic-conventions==0.47b0",
    "opentelemetry-semantic-conventions-ai==0.4.8",
    "outlines==0.1.11",
    "outlines-core==0.1.26",
    "packaging==25.0",
    "pandas==2.2.3",
    "partial-json-parser==0.2.1.1.post5",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "prometheus-client==0.21.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "propcache==0.3.1",
    "protobuf==4.25.7",
    "psutil==7.0.0",
    "py-cpuinfo==9.0.0",
    "pyarrow==20.0.0",
    "pycountry==24.6.1",
    "pycparser==2.22 ; implementation_name == 'pypy'",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "ray==2.46.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==14.0.0",
    "rich-toolkit==0.14.6",
    "rpds-py==0.24.0",
    "safetensors==0.5.3",
    "scipy==1.15.3",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.28.0",
    "setproctitle==1.3.6",
    "setuptools==80.7.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "sympy==1.13.1",
    "tenacity==8.5.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "triton==3.2.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typer==0.15.3",
    "types-requests==2.32.0.20250515",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "uvloop==0.21.0 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "vllm==0.8.5.post1",
    "wandb==0.19.11",
    "watchfiles==1.0.5",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "wordfreq==3.1.1",
    "wrapt==1.17.2",
    "xformers==0.0.29.post2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "xgrammar==0.1.18 ; platform_machine == 'aarch64' or platform_machine == 'x86_64'",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "zipp==3.21.0",
]
